--- a/Revolution-in-digital-Space.html
+++ b/Revolution-in-digital-Space.html
@@ -23,8 +23,8 @@
 	<meta property="og:description" content="The Year 2020 has been a year of change both within the real and virtual world. the huge revolution within the Digital World was extraordinary. Some changes were positive and a few negative. it had been the time of latest normal which seemed impossible before. <br><br>
 	The year 2020 was the year of ‘Digital evolution’. Words like Work from Home, Webinars, COVID-19, Social distancing, Quarantine, etc, which we had never heard before became an integral a part of our life. It became an important keyword for digital marketing as customers demanded brands to be more emotionally appealing. it had been the time of personalization and responsible marketing which we had never experienced before.<br><br>
 	Some changes within the digital world were evident and for a few , we had become the part even without knowing it. during this article, we'll discuss the main changes and therefore the ruling trends of the year 2020 which can still grow within the coming years too.">
-	<!-- <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
-	<meta property="og:image" content="assets/images/favicon-black.png"/>
+	<meta property="og:image" content="assets/images/image.jpeg"/>
+	<meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
@@ -33,8 +33,8 @@
 	<meta property="twitter:description" content="The Year 2020 has been a year of change both within the real and virtual world. the huge revolution within the Digital World was extraordinary. Some changes were positive and a few negative. it had been the time of latest normal which seemed impossible before. <br><br>
 	The year 2020 was the year of ‘Digital evolution’. Words like Work from Home, Webinars, COVID-19, Social distancing, Quarantine, etc, which we had never heard before became an integral a part of our life. It became an important keyword for digital marketing as customers demanded brands to be more emotionally appealing. it had been the time of personalization and responsible marketing which we had never experienced before.<br><br>
 	Some changes within the digital world were evident and for a few , we had become the part even without knowing it. during this article, we'll discuss the main changes and therefore the ruling trends of the year 2020 which can still grow within the coming years too.">
-	<!-- <meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
-	<meta property="twitter:image" content="assets/images/favicon-black.png"/>
+	<meta property="twitter:image" content="assets/images/image.jpeg"/>
+	<meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon-black.png">
@@ -702,7 +702,7 @@
 					<!-- footer-copyright start -->
 					<div class="footer-copyright text-center pos-abs pos-bottom-center">
 						<p class="copyright-style">
-							&copy; Copyright 2021 Dax. Designed By <a href="#" class="text-weight-700 js-pointer-small">Dax</a>
+							&copy; Copyright 2021 Dax.
 						</p>
 					</div><!-- footer-copyright end -->
 				</div><!-- container end -->
