--- a/about-us.html
+++ b/about-us.html
@@ -5,6 +5,16 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176593466-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-176593466-1');
+	</script>
+
 
 	<!-- Primary Meta Tags -->
 	<title>DAX | About - Best Digital Marketing Agency </title>
@@ -620,7 +630,7 @@
 					<!-- footer-copyright start -->
 					<div class="footer-copyright text-center pos-abs pos-bottom-center">
 						<p class="copyright-style">
-							&copy; Copyright 2021 Dax. Designed By <a href="#" class="text-weight-700 js-pointer-small">Dax</a>
+							&copy; Copyright 2021 Dax.
 						</p>
 					</div><!-- footer-copyright end -->
 				</div><!-- container end -->
