--- a/blog_sliders.html
+++ b/blog_sliders.html
@@ -4,10 +4,20 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176593466-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-176593466-1');
+	</script>
+
 
 	<!-- Primary Meta Tags -->
-	<title>DAX | Blog's - Best Digital Marketing Agency </title>
-	<meta name="title" content="DAX | Blog's - Best Digital Marketing Agency">
+	<title>DAX | Blogs - Best Digital Marketing Agency </title>
+	<meta name="title" content="DAX | Blogs - Best Digital Marketing Agency">
 	<meta name="description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
 			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
 	<meta name="keywords" content="Digital marketing,web development, app development,advertising, agency,graphic designing,kannur, graphic designing kannur,kerala, seo,search engine optimization,ecommerce digital marketing agency,advertising mediadigital marketing solutions,digital marketing agency near me,digital marketing classes,mba in digital marketing,digital marketing specialist,digital marketing manager,digital marketing salary,digital marketing interview questions,digital marketing news,digital marketing strategies,digital market,digital marketing companies,digital marketing training,digital marketing certification,google digital marketing certificate,digital marketing agencies,digital marketing institute,digital advertising,digital marketing definition,digital marketer,digital marketing strategy,digital marketing tools,digital marketing courses,learn digital with google,digital marketing services,google garage digital marketing,digital marketing jobs,digital marketing course online free,digital marketing company,google digital marketing,fundamentals of digital marketing,marketing digital,digital marketing agency,digital marketing online course,digital marketing course online,digital marketing course,what is digital marketing,google digital marketing course">
@@ -18,20 +28,20 @@
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://thedaxads.com/">
-	<meta property="og:title" content="DAX | Blog's - Best Digital Marketing Agency">
+	<meta property="og:title" content="DAX | Blogs - Best Digital Marketing Agency">
 	<meta property="og:description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
 			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
-	<!-- <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
-	<meta property="og:image" content="assets/images/favicon-black.png"/>
+	<meta property="og:image" content="assets/images/image.jpeg"/>
+	<meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://thedaxads.com/">
-	<meta property="twitter:title" content="DAX | Blog's - Best Digital Marketing Agency">
+	<meta property="twitter:title" content="DAX | Blogs - Best Digital Marketing Agency">
 	<meta property="twitter:description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
 			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
-	<!-- <meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
-	<meta property="twitter:image" content="assets/images/favicon-black.png"/>
+	<meta property="twitter:image" content="assets/images/image.jpeg"/>
+	<meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon-black.png">
@@ -329,7 +339,7 @@
 					<div class="padding-top-bottom-120 width-100perc">
 						<!-- title start -->
 						<h2 class="headline-xxxxl text-center hidden-box after-preloader-anim">
-							<span class="anim-slide">Our <span class="text-color-red">Blog's</span></span>
+							<span class="anim-slide">Our <span class="text-color-red">Blogs</span></span>
 						</h2><!-- title end -->
 					</div>
 				</div><!-- pos-rel end -->
@@ -436,7 +446,7 @@
 							<!-- swiper-slide start -->
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
-									<a href="You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" class="d-block hover-box js-animsition-link js-pointer-large">
+									<a href="top-choices-in-web-hosting.html" class="d-block hover-box js-animsition-link js-pointer-large">
 										<img class="anim-img-scale__inner" src="assets/images/posts/hosting/horizontal-hosting.jpg" alt="Post">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
@@ -449,7 +459,7 @@
 									</a>
 									<ul class="pos-abs pos-left-top list list_row list_margin-30px">
 										<li class="list__item">
-											<a href="https://www.instagram.com/_wacheee_/" target="_blank" class="subhead-xxs anim-text-fill tr-delay-04 js-pointer-small" data-text="By: Amal Prakash">By: Amal Prakash</a>
+											<a href="https://www.instagram.com/i_m_ml_07/" target="_blank" class="subhead-xxs anim-text-fill tr-delay-04 js-pointer-small" data-text="By: Amal Prakash">By: Amal Prakash</a>
 										</li>
 										<!-- <li class="list__item">
 											<a href="#" class="subhead-xxs anim-text-fill tr-delay-05 js-pointer-small" data-text="In: Art">In: Art</a>
@@ -773,7 +783,7 @@
 					<!-- footer-copyright start -->
 					<div class="footer-copyright text-center pos-abs pos-bottom-center">
 						<p class="copyright-style">
-							&copy; Copyright 2021 Dax. Designed By <a href="#" class="text-weight-700 js-pointer-small">Dax</a>
+							&copy; Copyright 2021 Dax.
 						</p>
 					</div><!-- footer-copyright end -->
 				</div><!-- container end -->
