--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -21,8 +21,8 @@
 	<meta property="og:title" content="Digital Marketing - DAX | Academy">
 	<meta property="og:description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
 			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
-	<!-- <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
-	<meta property="og:image" content="assets/images/favicon-black.png"/>
+	<meta property="og:image" content="assets/images/image.jpeg"/>
+	<meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
@@ -30,8 +30,8 @@
 	<meta property="twitter:title" content="Digital Marketing - DAX | Academy">
 	<meta property="twitter:description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
 			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
-	<!-- <meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
-	<meta property="twitter:image" content="assets/images/favicon-black.png"/>
+	<meta property="twitter:image" content="assets/images/image.jpeg"/>
+	<meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
 
 
 		<!-- favicon -->
@@ -673,7 +673,7 @@
 					<!-- footer-copyright start -->
 					<div class="footer-copyright text-center pos-abs pos-bottom-center">
 						<p class="copyright-style">
-							&copy; Copyright 2021 Dax. Designed By <a href="#" class="text-weight-700 js-pointer-small">Dax</a>
+							&copy; Copyright 2021 Dax.
 						</p>
 					</div><!-- footer-copyright end -->
 				</div><!-- container end -->
