--- a/services.html
+++ b/services.html
@@ -4,6 +4,16 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176593466-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-176593466-1');
+	</script>
+
 
 	<!-- Primary Meta Tags -->
 	<title>DAX | Services - Best Digital Marketing Agency </title>
@@ -21,8 +31,8 @@
 	<meta property="og:title" content="DAX | Services - Best Digital Marketing Agency">
 	<meta property="og:description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
 			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
-	<!-- <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
-	<meta property="og:image" content="assets/images/favicon-black.png"/>
+	<meta property="og:image" content="assets/images/image.jpeg"/>
+	<meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
@@ -30,8 +40,8 @@
 	<meta property="twitter:title" content="DAX | Services - Best Digital Marketing Agency">
 	<meta property="twitter:description" content="We are more than just a marketing agency. Our work involves both analysis and creation. We communicate, design, develop and publish… To influence, experience, move and encourage . We understand that there’s more to marketing Than making you look good, we work to escalate your growth in business. As your strategic partner, we devise an expert plan to market your brand to gain maximum exposure.
 			We also over-deliver our customer expectations with our versatile style of doing work with innovative working methodology and embedding teamed and brilliant execution results in high-quality advertising with standards difficult to rise up to.">
-	<!-- <meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
-	<meta property="twitter:image" content="assets/images/favicon-black.png"/>
+	<meta property="twitter:image" content="assets/images/image.jpeg"/>
+	<meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon-black.png">
@@ -370,7 +380,7 @@
 										<span class="anim-slide tr-delay-02"></span>
 									</span>
 									<p class="body-text-s margin-top-20 anim-text-reveal tr-delay-04">
-										We can attracte customers towards your business with a strong brand look & plan of action. utilize our graphic design skills and let's brand or rebrand your business now.
+										We can attract customers towards your business with a strong brand look & plan of action. utilize our graphic design skills and let's brand or rebrand your business now.
 									</p>
 								</div>
 							</div>
@@ -613,8 +623,7 @@
 					<!-- footer-copyright start -->
 					<div class="footer-copyright text-center pos-abs pos-bottom-center">
 						<p class="copyright-style">
-							&copy; Copyright 2021 Dax. Designed By <a href="#" class="text-weight-700 js-pointer-small">Dax</a>
-						</p>
+							&copy; Copyright 2021 Dax.						</p>
 					</div><!-- footer-copyright end -->
 				</div><!-- container end -->
 			</div><!-- pos-rel end -->
