--- a/You-Have-a-chance-to-Refine-Your-Marketing-Approach.html
+++ b/You-Have-a-chance-to-Refine-Your-Marketing-Approach.html
@@ -19,16 +19,16 @@
 	<meta property="og:url" content="https://thedaxads.com/">
 	<meta property="og:title" content="You Have a chance to Refine Your Marketing Approach | DAX - Best Digital Marketing Agency ">
 	<meta property="og:description" content="2020 forced many small businesses to become focused in ways they didn’t imagine last winter. I’m not gonna enter the apparent details that we’ve all lived through recently. You’re alright conscious of them a day . At DAX , we’ve refined our approach during this point , and I’ll share how during this post. Hopefully you’ll be inspired to require actions that assist you refine your marketing approach and position you well regardless of the business season you’re in.">
-	<!-- <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
-	<meta property="og:image" content="assets/images/favicon-black.png"/>
+	<meta property="og:image" content="assets/images/image.jpeg"/>
+	<meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://thedaxads.com/">
 	<meta property="twitter:title" content="You Have a chance to Refine Your Marketing Approach | DAX - Best Digital Marketing Agency ">
 	<meta property="twitter:description" content="2020 forced many small businesses to become focused in ways they didn’t imagine last winter. I’m not gonna enter the apparent details that we’ve all lived through recently. You’re alright conscious of them a day . At DAX , we’ve refined our approach during this point , and I’ll share how during this post. Hopefully you’ll be inspired to require actions that assist you refine your marketing approach and position you well regardless of the business season you’re in.">
-	<!-- <meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
-	<meta property="twitter:image" content="assets/images/favicon-black.png"/>
+	<meta property="twitter:image" content="assets/images/image.jpeg"/>
+	<meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
 
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon-black.png">
@@ -615,7 +615,7 @@
 					<!-- footer-copyright start -->
 					<div class="footer-copyright text-center pos-abs pos-bottom-center">
 						<p class="copyright-style">
-							&copy; Copyright 2021 Dax. Designed By <a href="#" class="text-weight-700 js-pointer-small">Dax</a>
+							&copy; Copyright 2021 Dax.
 						</p>
 					</div><!-- footer-copyright end -->
 				</div><!-- container end -->
