--- a/blog_sliders.html
+++ b/blog_sliders.html
@@ -471,6 +471,34 @@
 								</div>
 							</article><!-- swiper-slide end -->
 
+							<!-- swiper-slide start -->
+							<article class="swiper-slide">
+								<div class="anim-img-scale">
+									<a href="top-choices-in-web-hosting.html" class="d-block hover-box js-animsition-link js-pointer-large">
+										<img class="anim-img-scale__inner" src="assets/images/posts/hosting/horizontal-hosting.jpg" alt="Post">
+										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
+											<span class="hidden-box d-block">
+												<span class="anim-slide tr-delay-04">The Future Is Multi-shaped</span>
+											</span>
+											<!-- <span class="hidden-box d-block">
+												<span class="anim-slide tr-delay-05">web Hosting</span>
+											</span> -->
+										</h3>
+									</a>
+									<ul class="pos-abs pos-left-top list list_row list_margin-30px">
+										<li class="list__item">
+											<a href="https://www.linkedin.com/in/abhijith-pramod-b2973619a/" target="_blank" class="subhead-xxs anim-text-fill tr-delay-04 js-pointer-small" data-text="By: Abhijith Pramod">By: Abhijith Pramod</a>
+										</li>
+										<!-- <li class="list__item">
+											<a href="#" class="subhead-xxs anim-text-fill tr-delay-05 js-pointer-small" data-text="In: Art">In: Art</a>
+										</li> -->
+										<li class="list__item">
+											<a href="#0" class="subhead-xxs anim-text-fill tr-delay-06 js-pointer-small" data-text="14 February 2021">14 February 2021</a>
+										</li>
+									</ul>
+								</div>
+							</article><!-- swiper-slide end -->
+
 						</div><!-- swiper-wrapper end -->
 
 						<!-- swiper-button-prev start -->
@@ -505,6 +533,44 @@
 								Cloud bread cardigan messenger bag raw denim swag drinking vinegar. Yuccie jianbing bespoke retro, photo booth salvia. Helvetica hella vexillologist, prism lo-fi activated charcoal iPhone thundercats irony meggings meh cardigan chartreuse.
 							</p> -->
 						</div>
+
+						<!-- blog-entry start -->
+						<article class="flex-container reverse flex-align-center padding-top-60">
+							<div class="six-columns padding-top-30">
+								<div class="column-r-margin-40 anim-fade js-scrollanim">
+									<ul class="list list_row list_margin-30px">
+										<li class="list__item">
+											<a href="https://www.instagram.com/_wacheee_/" target="_blank" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">By: Abhijith Pramod</a>
+										</li>
+
+										<li class="list__item">
+											<a href="#0" class="subhead-xs text-color-8a8a8a text-hover-to-red js-pointer-small">14 February 2021</a>
+										</li>
+									</ul>
+									<a href="the-future-is-multi-shaped.html" class="margin-top-bottom-30 d-block js-pointer-large js-animsition-link">
+										<h3 class="headline-xs">The Future Is <br>Multi-shaped</h3>
+										<p class="body-text-xs margin-top-20">
+											Our education system was designed to turn us into “I-shaped” people. I's are one dimensional, linear in nature specialist of one domain. The world we live in now require more collaboration,...
+										</p>
+									</a>
+									<a href="the-future-is-multi-shaped.html" class="skew-btn js-pointer-large js-animsition-link">
+										<span class="skew-btn__box">
+											<span class="skew-btn__content">Continue reading</span>
+											<span class="skew-btn__arrow"></span>
+										</span>
+									</a>
+								</div>
+							</div>
+							<div class="six-columns padding-top-30">
+								<a href="the-future-is-multi-shaped.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
+									<div class="anim-img-reveal__hidden">
+										<div class="anim-img-reveal__scale">
+											<img class="img-hover-scale" src="assets/images/posts/digital-revolution/horizontal-dr.jpg" alt="Post">
+										</div>
+									</div>
+								</a>
+							</div>
+						</article><!-- blog-entry end -->
 
 						<!-- blog-entry start -->
 						<article class="flex-container flex-align-center padding-top-60">
