--- a/Revolution-in-digital-Space.html
+++ b/Revolution-in-digital-Space.html
@@ -4,6 +4,15 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176593466-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-176593466-1');
+	</script>
 
 	<!-- Primary Meta Tags -->
 	<title>Revolution in digital Space | DAX - Best Digital Marketing Agency </title>
@@ -23,8 +32,8 @@
 	<meta property="og:description" content="The Year 2020 has been a year of change both within the real and virtual world. the huge revolution within the Digital World was extraordinary. Some changes were positive and a few negative. it had been the time of latest normal which seemed impossible before. <br><br>
 	The year 2020 was the year of ‘Digital evolution’. Words like Work from Home, Webinars, COVID-19, Social distancing, Quarantine, etc, which we had never heard before became an integral a part of our life. It became an important keyword for digital marketing as customers demanded brands to be more emotionally appealing. it had been the time of personalization and responsible marketing which we had never experienced before.<br><br>
 	Some changes within the digital world were evident and for a few , we had become the part even without knowing it. during this article, we'll discuss the main changes and therefore the ruling trends of the year 2020 which can still grow within the coming years too.">
-	<meta property="og:image" content="assets/images/image.jpeg"/>
-	<meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
+	<meta property="og:image" content="assets/images/posts/digital-revolution/horizontal-dr.jpg"/>
+	<!-- <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
@@ -33,8 +42,8 @@
 	<meta property="twitter:description" content="The Year 2020 has been a year of change both within the real and virtual world. the huge revolution within the Digital World was extraordinary. Some changes were positive and a few negative. it had been the time of latest normal which seemed impossible before. <br><br>
 	The year 2020 was the year of ‘Digital evolution’. Words like Work from Home, Webinars, COVID-19, Social distancing, Quarantine, etc, which we had never heard before became an integral a part of our life. It became an important keyword for digital marketing as customers demanded brands to be more emotionally appealing. it had been the time of personalization and responsible marketing which we had never experienced before.<br><br>
 	Some changes within the digital world were evident and for a few , we had become the part even without knowing it. during this article, we'll discuss the main changes and therefore the ruling trends of the year 2020 which can still grow within the coming years too.">
-	<meta property="twitter:image" content="assets/images/image.jpeg"/>
-	<meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
+	<meta property="twitter:image" content="assets/images/posts/digital-revolution/horizontal-dr.jpg"/>
+	<!-- <meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
 
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon-black.png">
@@ -537,8 +546,8 @@
 									</li>
 									<li class="list__item">
 										<div class="anim-fade tr-delay-01">
-											<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" target="_blank" data-show-count="false" class=" icon-overlay-btn white js-pointer-large">
-												<i class="icon-overlay-btn__inner fab fa-twitter"></i>
+											<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://thedaxads.com/Revolution-in-digital-Space.html" target="_blank" data-show-count="false" class=" icon-overlay-btn white js-pointer-large">
+												<i class="icon-overlay-btn__inner fab fa-linkedin"></i>
 											</a>
 										</div>
 									</li>
@@ -551,7 +560,7 @@
 									</li>
 									<li class="list__item">
 										<div class="anim-fade tr-delay-04">
-											<a href="https://web.whatsapp.com/" target="_blank" class="icon-overlay-btn white js-pointer-large">
+											<a href="whatsapp://send?text=https://thedaxads.com/Revolution-in-digital-Space.html" target="_blank" class="icon-overlay-btn white js-pointer-large">
 												<i class="icon-overlay-btn__inner fab fa-whatsapp"></i>
 											</a>
 										</div>
