--- a/Three-Essential-Digital-Marketing-Channels-In-2020.html
+++ b/Three-Essential-Digital-Marketing-Channels-In-2020.html
@@ -4,6 +4,15 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176593466-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-176593466-1');
+	</script>
 
 	<!-- Primary Meta Tags -->
 	<title>Three Essential Digital Marketing Channels In 2020 | DAX - Best Digital Marketing Agency </title>
@@ -19,16 +28,16 @@
 	<meta property="og:url" content="https://thedaxads.com/">
 	<meta property="og:title" content="Three Essential Digital Marketing Channels In 2020 | DAX - Best Digital Marketing Agency">
 	<meta property="og:description" content="When it comes to digital marketing, email is the core of the industry. But, like wine or whiskey, email marketing keeps getting better with Era. Today, email can adapt to accommodate the device when a recipient uses to access their Mail, from a smartphone with a touchscreen to a desktop with a mouse and everything. Messages can focus on text or become as interactive as a website.">
-	<meta property="og:image" content="assets/images/image.jpeg"/>
-	<meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
+	<meta property="og:image" content="assets/images/posts/essential/horizontal-essential.jpg"/>
+	<!-- <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://thedaxads.com/">
 	<meta property="twitter:title" content="Three Essential Digital Marketing Channels In 2020 | DAX - Best Digital Marketing Agency">
 	<meta property="twitter:description" content="When it comes to digital marketing, email is the core of the industry. But, like wine or whiskey, email marketing keeps getting better with Era. Today, email can adapt to accommodate the device when a recipient uses to access their Mail, from a smartphone with a touchscreen to a desktop with a mouse and everything. Messages can focus on text or become as interactive as a website.">
-	<meta property="twitter:image" content="assets/images/image.jpeg"/>
-	<meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
+	<meta property="twitter:image" content="assets/images/posts/essential/horizontal-essential.jpg"/>
+	<!-- <meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
 
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon-black.png">
@@ -524,21 +533,21 @@
 								</li>
 								<li class="list__item">
 									<div class="anim-fade tr-delay-01">
-										<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" target="_blank" data-show-count="false" class=" icon-overlay-btn white js-pointer-large">
-											<i class="icon-overlay-btn__inner fab fa-twitter"></i>
+										<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://thedaxads.com/Three-Essential-Digital-Marketing-Channels-In-2020.html" target="_blank" data-show-count="false" class=" icon-overlay-btn white js-pointer-large">
+											<i class="icon-overlay-btn__inner fab fa-linkedin"></i>
 										</a>
 									</div>
 								</li>
 								<li class="list__item">
 									<div class="anim-fade tr-delay-02">
-										<a href="https://www.facebook.com/" target="_blank" class="icon-overlay-btn white js-pointer-large">
+										<a href="https://www.facebook.com/sharer.php?u=https%3A%2F%2Fthedaxads.com%2FThree-Essential-Digital-Marketing-Channels-In-2020.html" target="_blank" class="icon-overlay-btn white js-pointer-large">
 											<i class="icon-overlay-btn__inner fab fa-facebook-f"></i>
 										</a>
 									</div>
 								</li>
 								<li class="list__item">
 									<div class="anim-fade tr-delay-04">
-										<a href="https://web.whatsapp.com/" target="_blank" class="icon-overlay-btn white js-pointer-large">
+										<a href="whatsapp://send?text=https://thedaxads.com/Three-Essential-Digital-Marketing-Channels-In-2020.html" target="_blank" class="icon-overlay-btn white js-pointer-large">
 											<i class="icon-overlay-btn__inner fab fa-whatsapp"></i>
 										</a>
 									</div>
