--- a/blog_sliders.html
+++ b/blog_sliders.html
@@ -475,7 +475,7 @@
 							<article class="swiper-slide">
 								<div class="anim-img-scale">
 									<a href="top-choices-in-web-hosting.html" class="d-block hover-box js-animsition-link js-pointer-large">
-										<img class="anim-img-scale__inner" src="assets/images/posts/hosting/horizontal-hosting.jpg" alt="Post">
+										<img class="anim-img-scale__inner" src="assets/images/posts/multi-shaped/horizontal.jpg" alt="Post">
 										<h3 class="headline-xxxs pos-abs pos-left-bottom hover-move-right">
 											<span class="hidden-box d-block">
 												<span class="anim-slide tr-delay-04">The Future Is Multi-shaped</span>
@@ -485,7 +485,7 @@
 											</span> -->
 										</h3>
 									</a>
-									<ul class="pos-abs pos-left-top list list_row list_margin-30px">
+									<ul class="pos-abs pos-right-top list list_row list_margin-30px">
 										<li class="list__item">
 											<a href="https://www.linkedin.com/in/abhijith-pramod-b2973619a/" target="_blank" class="subhead-xxs anim-text-fill tr-delay-04 js-pointer-small" data-text="By: Abhijith Pramod">By: Abhijith Pramod</a>
 										</li>
@@ -565,7 +565,7 @@
 								<a href="the-future-is-multi-shaped.html" class="d-block hover-box anim-img-reveal js-scrollanim js-pointer-large js-animsition-link">
 									<div class="anim-img-reveal__hidden">
 										<div class="anim-img-reveal__scale">
-											<img class="img-hover-scale" src="assets/images/posts/digital-revolution/horizontal-dr.jpg" alt="Post">
+											<img class="img-hover-scale" src="assets/images/posts/multi-shaped/veritcal.jpg" alt="Post">
 										</div>
 									</div>
 								</a>
