--- a/You-Have-a-chance-to-Refine-Your-Marketing-Approach.html
+++ b/You-Have-a-chance-to-Refine-Your-Marketing-Approach.html
@@ -4,6 +4,15 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176593466-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-176593466-1');
+	</script>
 
 	<!-- Primary Meta Tags -->
 	<title>You Have a chance to Refine Your Marketing Approach | DAX - Best Digital Marketing Agency </title>
@@ -19,16 +28,16 @@
 	<meta property="og:url" content="https://thedaxads.com/">
 	<meta property="og:title" content="You Have a chance to Refine Your Marketing Approach | DAX - Best Digital Marketing Agency ">
 	<meta property="og:description" content="2020 forced many small businesses to become focused in ways they didn’t imagine last winter. I’m not gonna enter the apparent details that we’ve all lived through recently. You’re alright conscious of them a day . At DAX , we’ve refined our approach during this point , and I’ll share how during this post. Hopefully you’ll be inspired to require actions that assist you refine your marketing approach and position you well regardless of the business season you’re in.">
-	<meta property="og:image" content="assets/images/image.jpeg"/>
-	<meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
+	<meta property="og:image" content="assets/images/posts/refine-marketing/horizontal-target.jpg"/>
+	<!-- <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://thedaxads.com/">
 	<meta property="twitter:title" content="You Have a chance to Refine Your Marketing Approach | DAX - Best Digital Marketing Agency ">
 	<meta property="twitter:description" content="2020 forced many small businesses to become focused in ways they didn’t imagine last winter. I’m not gonna enter the apparent details that we’ve all lived through recently. You’re alright conscious of them a day . At DAX , we’ve refined our approach during this point , and I’ll share how during this post. Hopefully you’ll be inspired to require actions that assist you refine your marketing approach and position you well regardless of the business season you’re in.">
-	<meta property="twitter:image" content="assets/images/image.jpeg"/>
-	<meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
+	<meta property="twitter:image" content="assets/images/posts/refine-marketing/horizontal-target.jpg"/>
+	<!-- <meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
 
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon-black.png">
@@ -451,8 +460,8 @@
 							</li>
 							<li class="list__item">
 								<div class="anim-fade tr-delay-01">
-									<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" target="_blank" data-show-count="false" class=" icon-overlay-btn white js-pointer-large">
-										<i class="icon-overlay-btn__inner fab fa-twitter"></i>
+									<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://thedaxads.com/You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" target="_blank" data-show-count="false" class=" icon-overlay-btn white js-pointer-large">
+										<i class="icon-overlay-btn__inner fab fa-linkedin"></i>
 									</a>
 								</div>
 							</li>
@@ -465,7 +474,7 @@
 							</li>
 							<li class="list__item">
 								<div class="anim-fade tr-delay-04">
-									<a href="https://web.whatsapp.com/" target="_blank" class="icon-overlay-btn white js-pointer-large">
+									<a href="whatsapp://send?text=https://thedaxads.com/You-Have-a-chance-to-Refine-Your-Marketing-Approach.html" target="_blank" class="icon-overlay-btn white js-pointer-large">
 										<i class="icon-overlay-btn__inner fab fa-whatsapp"></i>
 									</a>
 								</div>
