--- a/the-future-is-multi-shaped.html
+++ b/the-future-is-multi-shaped.html
@@ -4,6 +4,15 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176593466-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-176593466-1');
+	</script>
 
 	<!-- Primary Meta Tags -->
 	<title>The Future Is Multi-shaped | DAX - Best Digital Marketing Agency </title>
@@ -19,16 +28,16 @@
 	<meta property="og:url" content="https://thedaxads.com/">
 	<meta property="og:title" content="The Future Is Multi-shaped | DAX - Best Digital Marketing Agency ">
 	<meta property="og:description" content="Our education system was designed to turn us into “I-shaped” people. I's are one dimensional, linear in nature specialist of one domain. The world we live in now require more collaboration, more creativity than ever, we need to move beyond the ‘I’">
-	<meta property="og:image" content="assets/images/image.jpeg"/>
-	<meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
+	<meta property="og:image" content="assets/images/posts/multi-shaped/horizontal.jpg"/>
+	<!-- <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://thedaxads.com/">
 	<meta property="twitter:title" content="The Future Is Multi-shaped | DAX - Best Digital Marketing Agency ">
 	<meta property="twitter:description" content="Our education system was designed to turn us into “I-shaped” people. I's are one dimensional, linear in nature specialist of one domain. The world we live in now require more collaboration, more creativity than ever, we need to move beyond the ‘I’">
-	<meta property="twitter:image" content="assets/images/image.jpeg"/>
-	<meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
+	<meta property="twitter:image" content="assets/images/posts/multi-shaped/horizontal.jpg"/>
+	<!-- <meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
 
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon-black.png">
@@ -405,14 +414,14 @@
 													<!-- column start -->
 													<div class="six-columns padding-top-20">
 														<div class="column-r-margin-10 anim-overlay js-scrollanim">
-															<img src="assets/images/posts/refine-marketing/refine-approach.jpg" alt="Post">
+															<img src="assets/images/posts/multi-shaped/multishape03.jpg" alt="Post">
 														</div>
 													</div><!-- column end -->
 
 													<!-- column start -->
 													<div class="six-columns padding-top-20">
 														<div class="column-l-margin-10 anim-overlay js-scrollanim">
-															<img src="assets/images/posts/refine-marketing/refine-approach-1.jpg" alt="Post">
+															<img src="assets/images/posts/multi-shaped/multishape04.jpg" alt="Post">
 														</div>
 													</div><!-- column end -->
 												</div><!-- flex-container end -->
@@ -432,22 +441,22 @@
 										<!-- list start -->
 										<ul class="list js-scrollanim">
 											<li class="list__item red dot hidden-box">
-												<div class="subhead-xxs anim-slide">Back End Languages </div>
+												<div class="subhead-xxs anim-slide tr-delay-05">UI/UX</div>
 											</li>
 											<li class="list__item red dot hidden-box">
 												<div class="subhead-xxs anim-slide tr-delay-01">Front End Languages </div>
+											</li>
+											<li class="list__item red dot hidden-box">
+												<div class="subhead-xxs anim-slide">Back End Languages </div>
+											</li>
+											<li class="list__item red dot hidden-box">
+												<div class="subhead-xxs anim-slide tr-delay-04">Database </div>
 											</li>
 											<li class="list__item red dot hidden-box">
 												<div class="subhead-xxs anim-slide tr-delay-02">Microservice Architecture</div>
 											</li>
 											<li class="list__item red dot hidden-box">
 												<div class="subhead-xxs anim-slide tr-delay-03">Cloud Computing </div>
-											</li>
-											<li class="list__item red dot hidden-box">
-												<div class="subhead-xxs anim-slide tr-delay-04">Database </div>
-											</li>
-											<li class="list__item red dot hidden-box">
-												<div class="subhead-xxs anim-slide tr-delay-05">UI/UX</div>
 											</li>
 											<li class="list__item red dot hidden-box">
 												<div class="subhead-xxs anim-slide tr-delay-06">Security</div>
@@ -469,7 +478,7 @@
 
 						<div class="padding-top-30">
 							<div class="pos-rel">
-								<img src="assets/images/posts/digital-revolution/dr2.jpg" alt="Post">
+								<img src="assets/images/posts/multi-shaped/multishape01.jpg" alt="Post">
 								<!-- bg-overlay -->
 								<div class="bg-overlay-black"></div>
 								<!-- <a href="https://www.youtube.com/watch?v=hitNXU4PoRU" class="play-button js-popup-youtube js-pointer-large">
@@ -490,7 +499,7 @@
 							</div>
 
 							<div class="padding-top-30">
-								<img src="assets/images/posts/refine-marketing/refine-approach-2.jpg" alt="Post">
+								<img src="assets/images/posts/multi-shaped/multishape02.jpg" alt="Post">
 							</div>
 
 					</article><!-- entry-content end -->
@@ -508,8 +517,8 @@
 							</li>
 							<li class="list__item">
 								<div class="anim-fade tr-delay-01">
-									<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" target="_blank" data-show-count="false" class=" icon-overlay-btn white js-pointer-large">
-										<i class="icon-overlay-btn__inner fab fa-twitter"></i>
+									<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://thedaxads.com/the-future-is-multi-shaped.html" target="_blank"  class=" icon-overlay-btn white js-pointer-large">
+										<i class="icon-overlay-btn__inner fab fa-linkedin"></i>
 									</a>
 								</div>
 							</li>
@@ -522,7 +531,7 @@
 							</li>
 							<li class="list__item">
 								<div class="anim-fade tr-delay-04">
-									<a href="https://web.whatsapp.com/" target="_blank" class="icon-overlay-btn white js-pointer-large">
+									<a href="whatsapp://send?text=https://thedaxads.com/the-future-is-multi-shaped.html" target="_blank" class="icon-overlay-btn white js-pointer-large">
 										<i class="icon-overlay-btn__inner fab fa-whatsapp"></i>
 									</a>
 								</div>
