--- a/top-choices-in-web-hosting.html
+++ b/top-choices-in-web-hosting.html
@@ -4,6 +4,15 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="utf-8">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-176593466-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-176593466-1');
+	</script>
 
 	<!-- Primary Meta Tags -->
 	<title>Top Choices In Web Hosting | DAX - Best Digital Marketing Agency </title>
@@ -19,16 +28,16 @@
 	<meta property="og:url" content="https://thedaxads.com/">
 	<meta property="og:title" content="Top Choices In Web Hosting | DAX - Best Digital Marketing Agency ">
 	<meta property="og:description" content="In today’s Society, if you have got something to say, do, sell or whatever it is, you are going to need a website and you are going to need a really good provider to make sure that your traffic is managed that people can see it’s visibility and that the website is well protected and so many things that make sure your website lives up to the standard of what your customers should expect from you. So, like all things Web Hosting services comes in all shapes and sizes in whether they are offering shared hosting, dedicated hosting, VPS, Manage Hosting, Server Cores, Different RAMs, SSL Certificates etc. ... its endless, there is just an endless number of things that web hosting servers offers to you because what everybody needs is different.">
-	<meta property="og:image" content="assets/images/image.jpeg"/>
-	<meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
+	<meta property="og:image" content="assets/images/posts/hosting/horizontal-hosting.jpg"/>
+	<!-- <meta property="og:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://thedaxads.com/">
 	<meta property="twitter:title" content="Top Choices In Web Hosting | DAX - Best Digital Marketing Agency ">
 	<meta property="twitter:description" content="In today’s Society, if you have got something to say, do, sell or whatever it is, you are going to need a website and you are going to need a really good provider to make sure that your traffic is managed that people can see it’s visibility and that the website is well protected and so many things that make sure your website lives up to the standard of what your customers should expect from you. So, like all things Web Hosting services comes in all shapes and sizes in whether they are offering shared hosting, dedicated hosting, VPS, Manage Hosting, Server Cores, Different RAMs, SSL Certificates etc. ... its endless, there is just an endless number of things that web hosting servers offers to you because what everybody needs is different.">
-	<meta property="twitter:image" content="assets/images/image.jpeg"/>
-	<meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/>
+	<meta property="twitter:image" content="assets/images/posts/hosting/horizontal-hosting.jpg"/>
+	<!-- <meta property="twitter:image" content="https://images.pexels.com/photos/3183150/pexels-photo-3183150.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"/> -->
 
 
 	<!-- favicon -->
@@ -529,8 +538,8 @@
 								</li>
 								<li class="list__item">
 									<div class="anim-fade tr-delay-01">
-										<a href="https://twitter.com/share?ref_src=twsrc%5Etfw" target="_blank" data-show-count="false" class=" icon-overlay-btn white js-pointer-large">
-											<i class="icon-overlay-btn__inner fab fa-twitter"></i>
+										<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://thedaxads.com/top-choices-in-web-hosting.html" target="_blank" data-show-count="false" class=" icon-overlay-btn white js-pointer-large">
+											<i class="icon-overlay-btn__inner fab fa-linkedin"></i>
 										</a>
 									</div>
 								</li>
@@ -543,7 +552,7 @@
 								</li>
 								<li class="list__item">
 									<div class="anim-fade tr-delay-04">
-										<a href="https://web.whatsapp.com/" target="_blank" class="icon-overlay-btn white js-pointer-large">
+										<a href="whatsapp://send?text=https://thedaxads.com/top-choices-in-web-hosting.html" target="_blank" class="icon-overlay-btn white js-pointer-large">
 											<i class="icon-overlay-btn__inner fab fa-whatsapp"></i>
 										</a>
 									</div>
@@ -555,7 +564,7 @@
 			</section><!-- fresh topics end -->
 
 			<!-- next post start -->
-			<section class="pos-rel bg-img-cover" style="background-image:url(assets/images/posts/essential/horizontal-essential.jpg)">
+			<section class="pos-rel bg-img-cover" style="background-image:url(assets/images/posts/multi-shaped/horizontal.jpg)">
 				<!-- bg-overlay -->
 				<div class="bg-overlay-black"></div>
 				<!-- pos-rel start -->
