social link change ~ Blog

--- a/Three-Essential-Digital-Marketing-Channels-In-2020.html
+++ b/Three-Essential-Digital-Marketing-Channels-In-2020.html
@@ -362,7 +362,7 @@
 									</li>
 									<li class="list__item">
 										<a href="#" class="icon-overlay-btn white js-pointer-large">
-											<i class="icon-overlay-btn__inner fab fa-twitter"></i>
+											<i class="icon-overlay-btn__inner fab fa-linkedin"></i>
 										</a>
 									</li>
 									<li class="list__item">
