--- a/the-future-is-multi-shaped.html
+++ b/the-future-is-multi-shaped.html
@@ -361,12 +361,12 @@
 										</a>
 									</li>
 									<li class="list__item">
-										<a href="https://twitter.com/AbhijithPramod3" class="icon-overlay-btn white js-pointer-large">
-											<i class="icon-overlay-btn__inner fab fa-twitter"></i>
+										<a href="https://www.linkedin.com/in/abhijith-pramod-b2973619a/" class="icon-overlay-btn white js-pointer-large">
+											<i class="icon-overlay-btn__inner fab fa-linkedin"></i>
 										</a>
 									</li>
 									<li class="list__item">
-										<a href="https://www.linkedin.com/in/abhijith-pramod-b2973619a/" class="icon-overlay-btn white js-pointer-large">
+										<a href="#" class="icon-overlay-btn white js-pointer-large">
 											<i class="icon-overlay-btn__inner fab fa-facebook-f"></i>
 										</a>
 									</li>
